CruiseControl Release Notes - Latest CVS

AntBuilder
----------------------
* Fixed a bug in isWindows() that was returning false negatives. This would prevent antScript from working on some Windows systems.

ArtifactsPublisher
----------------------
* Added to the default plugin registry

build.sh
----------------------
* Fixed problem with eol characters preventing files from executing on unix systems

CVSBootstrapper
----------------------
* Add -dP to update command

EmailPublisher
----------------------
* Added nested success element - Patch by Marco Faini
* Added failAsImportant attribute - Patch by Ian MacDonald

FileServlet
----------------------
* Fixed a bug, brower displaying html source code, by adding the mime-type to the response.

HtmlEmailPublisher
----------------------
* Fixed a bug where username & password were ignored

JMX
----------------------
* Now exposing Project status (read-only) in the jmx interface

log4j.properties
----------------------
* Added more information into the console log including the timestamp - Patch by Mark Richters
* Added a rotating file log - Patch by Mark Richters

Project
----------------------
* Fixed a bug causing NPE when using a serialized project file from releases prior to 2.1

ProjectXMLHelper
----------------------
* Fixed a bug where if the log element existed dir was a required attribute

Schedule
----------------------
* Set maximum value for interval to one year

StarTeamBootstrapper
----------------------
* StarTeamBootstrapper submitted by Lee Marlow

testdetails.xsl
----------------------
* Added testdetails.xsl to generate content for the Test Details tab - Patch by Antoine Bonavita

CruiseControl Release Notes - 2.1.1

main/build.xml
----------------------
* update version to 2.1

reporting/jsp/build.xml
----------------------
* Filter token for build artifacts was missing  - Fixed by Jason Yip

cruisecontrol-jsp12.tld
----------------------